# verified-video-pipeline

./: .gitignore  ASSET_PROVENANCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: architecture.md  case-study.md  failure-model.md  production-vs-demo.md  release-process.md  threat-model.md
examples/: edit-plan.json
requirements/: release.txt
schemas/: edit-plan.schema.json  release-manifest.schema.json
scripts/: audit_public_tree.py  prepare_release.py
src/verified_video_pipeline/: __init__.py  __main__.py  atomic.py  cli.py  errors.py  hashing.py  journal.py  locks.py  media.py  pipeline.py  state.py
tests/: test_atomic.py  test_cli.py  test_hashing.py  test_journal.py  test_locks.py  test_media.py  test_pipeline_integration.py  test_release.py  test_release_contract_hardening.py  test_repository_contracts.py  test_state.py
